<resources>
    <string name="app_name">优买单</string>

    <string name="default_progress_text">加载中...</string>
    <string name="cancel_str">取消</string>
    <string name="sure_str">确认</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>


    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="zonghe_paixu_str">综合排序</string>
    <string name="sale_most_str">销量最高</string>
    <string name="good_most_str">好评最多</string>
    <string name="near_most_str">距离最近</string>

    <string name="all_order_str">全部订单</string>
    <string name="wait_pay_str">待订单</string>
    <string name="return_pay_str">退款</string>
    <string name="title_activity_order_detail">订单</string>

    <string name="daodian_ziqu_str">到店自取</string>
    <string name="daodian_yongcan_str">到店用餐</string>
    <string name="waimai_str">外卖配送</string>
    <string name="title_activity_seller_detail">SellerDetailActivity</string>

    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="title_activity_uorder_pay">UOrderPayActivity</string>
</resources>
